--- a/provisioning/resources/templates/hosts.j2
+++ b/provisioning/resources/templates/hosts.j2
@@ -3,10 +3,8 @@
 127.0.0.1	localhost
 127.0.1.1	{{ ansible_fqdn }}	{{ ansible_hostname }}
 
-{% for host in groups['all'] %}
-{% if hostvars[host].ansible_fqdn != ansible_fqdn %}
+{% for host in groups['cluster'] %}
 {{ host  }}	{{ hostvars[host].ansible_fqdn }}
-{% endif %}
 {% endfor  %}
 
 # The following lines are desirable for IPv6 capable hosts
