--- a/provisioning/resources/templates/ssh-config.j2
+++ b/provisioning/resources/templates/ssh-config.j2
@@ -5,8 +5,10 @@ Host *
 
 {% for host in groups['cluster'] %}
 {% if hostvars[host].ansible_fqdn != ansible_fqdn %}
-Host {{ hostvars[host].ansible_fqdn }}
+Host {{ hostvars[host].ansible_hostname }}
   Hostname {{ host  }}
+  User vagrant
+  IdentityFile /vagrant/.vagrant/machines/{{ hostvars[host].ansible_hostname }}/virtualbox/private_key
 
 {% endif %}
 {% endfor  %}
