--- a/provisioning/roles/docker/templates/docker-options.conf.j2
+++ b/provisioning/roles/docker/templates/docker-options.conf.j2
@@ -3,4 +3,5 @@
 [Service]
 Environment="DOCKER_OPTS=--iptables={{ docker_iptables_enabled | default('false') }} \
 --data-root={{ docker_data_root }} --log-driver {{ docker_log_driver }} {{ docker_log_opts }} \
---storage-driver {{ docker_storage_driver }} --exec-opt {{ docker_exec_opts }}"
+--storage-driver {{ docker_storage_driver }} --exec-opt {{ docker_exec_opts }} \
+--label provider=virtualbox"
