--- a/provisioning/roles/docker/templates/docker.service.j2
+++ b/provisioning/roles/docker/templates/docker.service.j2
@@ -9,7 +9,11 @@ Requires=docker.socket
 
 [Service]
 Type=notify
-ExecStart=/usr/bin/dockerd -H tcp://0.0.0.0:2376 -H unix:///var/run/docker.sock $DOCKER_OPTS
+ExecStart=/usr/bin/dockerd \
+          -H tcp://0.0.0.0:2376 \
+          -H unix:///var/run/docker.sock \
+          $DOCKER_OPTS \
+          $DOCKER_DNS_OPTIONS
 ExecReload=/bin/kill -s HUP $MAINPID
 
 LimitNOFILE=1048576
