--- a/provisioning/roles/kubernetes/kubelet/templates/kubelet.j2
+++ b/provisioning/roles/kubernetes/kubelet/templates/kubelet.j2
@@ -1,3 +1,3 @@
 # {{ ansible_managed }}
 
-KUBELET_EXTRA_ARGS="--node-ip={{ ansible_host }}"
+KUBELET_EXTRA_ARGS="--node-ip={{ ansible_host }} --cgroup-driver=systemd"
