--- a/provisioning/roles/docker/templates/docker.service.j2
+++ b/provisioning/roles/docker/templates/docker.service.j2
@@ -12,8 +12,7 @@ Type=notify
 ExecStart=/usr/bin/dockerd \
           -H tcp://0.0.0.0:2376 \
           -H unix:///var/run/docker.sock \
-          $DOCKER_OPTS \
-          $DOCKER_DNS_OPTIONS
+          $DOCKER_OPTS
 ExecReload=/bin/kill -s HUP $MAINPID
 
 LimitNOFILE=1048576
